--- a/index/00-acknowledgements.Rmd
+++ b/index/00-acknowledgements.Rmd
@@ -13,10 +13,10 @@ Thank you also to Team Timpson members who have been so encouraging and supporti
 
 Matt Lee - thanks for gently pressuring me into using R Markdown to write my thesis and for being there to fix it when I couldn't! 
 
-The collaborations and analyses wouldn't have been possible without these amazing people helping me out - Nicole Soranzo, Klaudia Walter, Adam Butterworth, Andrew Mumford, Dimitri Pournaras, Naveed Sattar, Michael Holmes.
+The collaborations and analyses wouldn't have been possible without these amazing people helping me out - Nicole Soranzo, Klaudia Walter, Adam Butterworth, Andrew Mumford, Dimitri Pournaras, Jill Townley, Alexis Sudlow, Naveed Sattar, Michael Holmes.
 
-I would also like to thank my family and friends for their support throughout my PhD. Thank you to my mum for being so amazing. I would definitely not have got this far without your support throughout my education. I also appreciate the effort to read the abstracts even if you're not sure what they mean. Thank you also to my Dad, my brother Mark and sister Jenna for all their encouragement. 
+I would also like to thank my family and friends for their support throughout my PhD. Thank you to my mum for being so amazing. I would definitely not have got this far without your support throughout my education. I also appreciate the effort to read the abstracts even if you're not sure what they mean. Thank you also to my dad, my brother Mark and sister Jenna for all their encouragement. 
 
 To my flat mates of 3.5 years, Tessa and Josie, thanks for the support and motivation to keep going, especially in each lockdown when all we saw was each other. I couldn't have spent the time with anyone better.
 
-And lastly, thank you to my boyfriend Harry. Whether it be sending gifts for abstracts being accepted, printing out my first publication into a booklet or just offering words of encouragement, you have been a rock through it all! 
+And lastly, thank you to my boyfriend, Harry. Whether it be sending gifts for abstracts being accepted, printing out my first publication into a booklet or just offering words of encouragement, you have been a rock through it all! 
