--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -38,7 +38,7 @@ Although body fatness (adiposity) has long been associated with adverse health, 
 Diseases affecting the heart and blood vessels are the major cause of mortality in many countries[@BritishHeartFoundation2021]. In 2019, global deaths from coronary heart disease (CHD) and stroke amounted to ~9 million and ~6.5 million deaths, respectively[@BritishHeartFoundation2021]. Current known risk factors for cardiovascular diseases include smoking, a sedentary lifestyle, poor diet and high cholesterol[@Virani2021]. Overweight and obesity are also well established risk factors for such diseases. Obesity leads the years lived with disability and injury risk factors in the United States[@Virani2021]. Various studies have found a link between adiposity and cardiovascular risk through various study designs. For example, large observational studies have found that adults with overweight or obesity have a higher risk of cardiovascular events and death from cardiovascular disease[@Khan2018]. Another study found that an average increase in BMI of 4 kg/m^2^ across a population increased the odds of ischaemic heart disease by 20-30%[@Nordestgaard2012]. 
 
 ## Mendelian randomisation can be used to explore causality
-Risk factors have often been identified through observational associations. Observational studies are often limited by bias, confounding and reverse causation[@Davies2018]. Mendelian randomisation (MR) is a technique which exploits the random assortment of alleles to estimate the causal association between a modifiable risk factor and disease outcomes. It can be likened to a natural randomised controlled trial (RCT)[@Gill2020]. This technique is widely implemented due to the availability of genetic data in large cohorts, such as in ~500,000 UK Biobank participants[@Bycroft2018]. An example of how MR and RCTs can be used to determine causality is shown in Figure \@ref(fig:MR-CVevent), using BMI and cardiovascular events as an example[@Doney2009]. Here, genotypes that are associated with BMI can be used. These genotypes should only be associated with BMI and not other confounding factors. If people with genotypes which are associated with higher BMI also have higher rates of cardiovascular events, it is likely that the relationship between BMI and cardiovascular events is causal. Although a useful technique in exploring causality, MR has its own biases and limitations, therefore other lines of evidence and study designs such as RCTs are required. In an RCT, if a weight loss intervention reduces BMI compared to the control group, and also reduces the rate of cardiovascular events, this also supports a causal role of BMI in the onset of cardiovascular events. The RCT is considered gold standard in understanding causality, however these trials are expensive and take a long time due to the time needed to follow up participants.
+Risk factors have often been identified through observational associations. Observational studies are often limited by bias, confounding and reverse causation[@Davies2018]. Mendelian randomisation (MR) is a technique which exploits the random assortment of alleles to estimate the causal association between a modifiable risk factor and disease outcomes. There are two main types of MR that can performed: one-sample MR and two-sample MR. One-sample MR is used where the exposure and outcome are measured in the same sample, whereas in two-sample MR the SNP-exposure and SNP-outcome estimates are derived from separate populations[@Zheng2019a]. MR can be likened to a natural randomised controlled trial (RCT)[@Gill2020]. This technique is widely implemented due to the availability of genetic data in large cohorts, such as in ~500,000 UK Biobank participants[@Bycroft2018]. An example of how MR and RCTs can be used to determine causality is shown in Figure \@ref(fig:MR-CVevent), using BMI and cardiovascular events as an example[@Doney2009]. Here, genotypes that are associated with BMI can be used. These genotypes should only be associated with BMI and not other confounding factors. If people with genotypes which are associated with higher BMI also have higher rates of cardiovascular events, it is likely that the relationship between BMI and cardiovascular events is causal. Although a useful technique in exploring causality, MR has its own biases and limitations, therefore other lines of evidence and study designs such as RCTs are required. In an RCT, if a weight loss intervention reduces BMI compared to the control group, and also reduces the rate of cardiovascular events, this also supports a causal role of BMI in the onset of cardiovascular events. The RCT is considered gold standard in understanding causality, however these trials are expensive and take a long time due to the time needed to follow up participants.
 
 (ref:scaption-MR-CVevent) Mendelian randomisation and randomised controlled trial example using body mass index and cardiovascular events
 
@@ -52,13 +52,13 @@ include_graphics(path = "figure/Intro_background/BMI_MR_RCT_CVevent.png", dpi = 
 As indicated above, Mendelian randomisation can be used to estimate the causal relationship of BMI on various outcomes. There are strong correlations between BMI and more direct measures of fat mass measured by dual-energy X-ray absorptiometry (DXA)[@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Environmental factors are well known to explain a large amount of variance in BMI, but genetic variants also influence BMI. Monogenic obesity was first identified where mutations in the ob (leptin) gene[@Zhang1994] led to mice having obesity. This was later discovered to be because leptin was secreted by adipose tissue and was found to influence food consumption[@Friedman1998]. The first genome-wide association study (GWAS) for obesity traits was performed in 2007 for around 5,000 individuals[@Scuteri2007], which found evidence that 10 SNPs were associated with BMI. Since then, GWAS have been performed in increasingly larger cohort sizes[@Locke2015], with the largest and most recent GWAS performed in 2018 by Yengo et al.[@Yengo2018]. This GWAS found 941 near-independent genetic variants which associate with BMI. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations[@Yengo2018].
 
 ## Types of CVD
-As indicated in section \@ref(CVD-stats), CHD and stroke affect millions of people worldwide every year. CVD is used as a term to describe the group of diseases which affect the heart or blood vessels. Within CVD there are various diseases which range in their clinical presentation and pathology. CHD (also referred to as coronary artery disease (CAD) or ischaemic heart disease (IHD)) is caused by a build up of plaques in the arteries (atherosclerosis). These plaques are caused by low density lipoproteins (LDLs) accumulating in the intima of the arteries, where they undergo oxidation[@Bentzon2014]. This then activates immune response and macrophages and lymphocytes also accumulate within the intima[@Badimon2012]. The plaques build in size and may eventually rupture the endothelium, initiating platelet activation and thrombus formation (arterial thrombosis, Figure \@ref(fig:thrombi-cartoon)A), thereby causing a heart attack. Other types of CVD include stroke, which can be either ischaemic (another form of arterial thrombosis) or haemorrhagic. Arterial thrombi are estimated to be composed of 31% platelets[@Chernysh2020].
+As indicated in section \@ref(CVD-stats), CHD and stroke affect millions of people worldwide every year. CVD is used as a term to describe the group of diseases which affect the heart or blood vessels. Within CVD there are various diseases which range in their clinical presentation and pathology. CHD (also referred to as coronary artery disease (CAD) or ischaemic heart disease (IHD)) is caused by a build up of plaques in the arteries (atherosclerosis). These plaques are caused by low density lipoproteins (LDLs) accumulating in the intima of the arteries, where they undergo oxidation[@Bentzon2014]. This then activates immune response and macrophages and lymphocytes also accumulate within the intima[@Badimon2012]. The plaques build in size and may eventually rupture the endothelium of the artery, initiating platelet activation and thrombus formation (arterial thrombosis, Figure \@ref(fig:thrombi-cartoon)A), thereby causing a heart attack. Other types of CVD include stroke, which can be either ischaemic (another form of arterial thrombosis) or haemorrhagic. Arterial thrombi are estimated to be composed of 31% platelets[@Chernysh2020].
 
 Thrombi can also form in veins (venous thromboembolism/VTE), thereby causing deep venous thrombosis (DVT) when the thrombus is in the legs or pulmonary embolism when an embolus becomes lodged in the lungs. Unlike arterial thrombi, venous thrombi form low shear rates[@Koupenova2017a]. DVT is thought to start in the legs close to the valves as these are areas of stasis and hypoxia[@Esmon2009; @Stone2017]. This slowing of the blood reduces oxygen tension and increases haematocrit[@Stone2017]. The stasis and hypoxia also lead to downregulation of anticaogulant proteins such as thrombomodulin and endothelial protein C receptor (EPCR)[@Stone2017] and an upregulation of procoagulant proteins such as the adhesion molecule P-selectin. Venous thrombi mainly consist of a red cell dense fibrous clot (Figure \@ref(fig:thrombi-cartoon)B). Despite not as highly present in venous thrombi as arterial thrombi, platelets still play a role and form an inner layer of the thrombus[@Stone2017].
 
 (ref:scaption-thrombi-cartoon) Cartoon of arterial and venous thrombosis
 
-(ref:caption-thrombi-cartoon) **Cartoon of arterial and venous thrombosis**. A) Arterial thrombi form when atherosclerotic plaques rupture and are rich in platelets. B) Venous thrombi mostly occur with an intact endothelial wall and are rich in fibrin, with red blood cells and a smaller proportion of platelets. Figure from Koupenova et al.[@Koupenova2017a].
+(ref:caption-thrombi-cartoon) **Cartoon of arterial and venous thrombosis**. A) Arterial thrombi form when atherosclerotic plaques rupture and are rich in platelets. B) Venous thrombi mostly occur with an intact endothelial wall and are rich in fibrin, with red blood cells and a smaller proportion of platelets. Figure adapted from Koupenova et al.[@Koupenova2017a].
 
 ```{r thrombi-cartoon, echo = FALSE, fig.cap="(ref:caption-thrombi-cartoon)", fig.align = "center", fig.scap="(ref:scaption-thrombi-cartoon)", out.width="80%"}
 include_graphics(path = "figure/Intro_background/Thrombosis_venous_arterial.jpg", dpi = NA)
@@ -73,7 +73,7 @@ There is extensive evidence that higher BMI causes hypertension and T2D, which c
 ## Platelets are key cells in thrombosis
 Platelets are anucleate cells which are generated from megakaryocytes in the bone marrow. Platelets are one of the key cells involved in haemostasis[@Rivera2009]. Under normal conditions, the endothelium releases nitric oxide (NO) and prostaglandin I2 (PGI2) which suppress platelet activation[@Yau2015]. When the endothelium is damaged, platelets adhere to the injured vessel wall through the glycoprotein Ib-IX-V (GPIb-IX-V) receptor and the glycoprotein VI (GPVI) collagen receptor. As a result, platelets secrete alpha and dense granules and undergo shape change[@Badimon2012]. Alpha granules release growth factors (e.g. IGF-1), clotting factors and chemokines[@Gear2003], whereas dense granules release molecules such as adenosine diphosphate (ADP), which further activate platelets by interacting with the P2Y~1~ and P2Y~12~ platelet receptors. Integrins are heterodimeric transmembrane glycoprotein complexes, which are important in platelet activation[@Durrant2017a]. One of the main integrins for platelet activation is integrin α~IIb~β~3~[@Huang2019], of which there are 50,000-100,000 integrins per resting platelet. Under resting conditions, integrin α~IIb~β~3~ adopts a low affinity state. Binding of agonists such as thrombin (or the synthetic peptide agonist PAR1-AP/TRAP-6) to the protease-activated receptor 1 (PAR1) results in activation of integrin α~IIb~β~3~. This is known as inside-out signalling. Here, inositol trisphosphate (IP3) and diacylglycerol are generated, which leads to an increase in cytosolic calcium (Ca^2+^). This in turn activates CALDAG-GEF1 as well as protein kinase C (PKC)[@Mehrbod2013]. The small GTPase, Rap1 is then activated which recruits proteins such as talin and kindlin[@Durrant2017]. This leads to a change in conformation to increase the affinity of integrin α~IIb~β~3~ for its ligand, fibrinogen[@Huang2019]. Neighbouring platelets then become activated due to the release of local mediators such as ADP and thromboxane A~2~ (TxA~2~, which acts at the TP receptor)[@Offermanns2006]. Subsequent fibrinogen binding results in cross-linking of activated platelets (platelet aggregation) via integrin α~IIb~β~3~, resulting in the cessation of bleeding[@Rivera2009]. These key platelet agonists and receptors are shown in Figure \@ref(fig:platelet-activation-receptors). Despite these processes being essential for haemostasis, when platelets become hyperactive, the balance is tipped in favour of thrombosis following plaque rupture. This can cause a myocardial infarction and stroke.
 
-(ref:caption-platelet-activation-receptors) **Key platelet receptors for platelet activation**. Figure made using BioRender.com.
+(ref:caption-platelet-activation-receptors) **Key platelet receptors for platelet activation**. PAR = protease activated receptor, TRAP-6 = thrombin receptor-activating peptide-6 (PAR1-AP), TXA2 = Thromboxane A2, P2Y = Purinergic receptor, α~IIb~β~3~ and α~2~β~1~ = integrins, GP = Glycoprotein, VWF = von Willebrand Factor. Figure made using BioRender.com.
 
 (ref:scaption-platelet-activation-receptors) Key platelet receptors for platelet activation
 
@@ -110,7 +110,7 @@ Although there are not many large studies directly exploring platelet function, 
 
 More recent haematology analysers such as the Sysmex XN series analysers can provide additional information about platelet structure. They use a combination of fluorescence and impedence flow cyotemtry. Additional readouts provided by these analyzers include immature platelet count (IPC, the number of immature platelets) as well as immature platelet fraction (IPF, the fraction of platelets which are immature), based on a gating of their forward scatter (FSC, size) and side fluorescence (SFL, an indicator of mRNA content)[@UnayDemirel2018a]. An example of detection of PLT and IPF by flow cytometry is shown in Figure \@ref(fig:sysmex-ipf)[@Corpataux2020]. Immature platelets, or reticulated platelets, are the youngest platelets in circulation. They persist for between 24 and 36 hours[@Corpataux2020]. Immature platelets are larger in size and have more mRNA than older circulating platelets. Over time the mRNA degrades and they gradually decrease in size. There are various studies which have suggested that a larger number of immature platelets may increase the risk of suffering from major adverse cardiovascular events (MACE)[@Ibrahim2014]. This suggests that immature platelets may be more reactive than older circulating platelets.
 
-(ref:caption-sysmex-ipf) **Scatter plot indicating how platelets and immature platelets are detected using a Sysmex haematology analyser**. The forward scatter (FSC, a measure of cell size) and side fluorescence (SFL, a measure of cell mRNA content) are used to detect cell types. Immature platelets have a larger FSC and SFL. PLT-F = fluorescent platelet count, IPF = immature platelet fraction, RBC = red blood cells, WBC = white blood cells. Figure from Corpataux et al.[@Corpataux2020].
+(ref:caption-sysmex-ipf) **Scatter plot indicating how platelets and immature platelets are detected using a Sysmex haematology analyser**. The forward scatter (FSC, a measure of cell size) and side fluorescence (SFL, a measure of cell mRNA content) are used to detect cell types. Immature platelets have a larger FSC and SFL. PLT-F = fluorescent platelet count, IPF = immature platelet fraction, RBC = red blood cells, WBC = white blood cells. Figure adapted from Corpataux et al.[@Corpataux2020].
 
 (ref:scaption-sysmex-ipf) Scatter plot indicating how platelets are immature platelets are detected using a Sysmex haematology analyser
 
@@ -134,7 +134,7 @@ Through literature searches, there is evidence for an association between BMI an
 To understand mechanisms of disease, various study designs are required. Each experimental approach used when testing hypotheses has biases and limitations. For example, using basic science it is possible to explore mechanistic effects _in vitro_, _in vivo_ or _ex vivo_, which is crucial. However, it is often difficult to fully understand how findings might translate in a clinical setting. Similarly, observational studies can provide useful clinical information, but these can generally only be used to identify correlation, not causation. Randomised controlled trials (RCTs) are considered the gold standard way to determine efficacy and causality, especially in drug trials, however these trials are often time consuming and expensive[@Bennett2017]. To overcome this issue, MR utilises genetic information to be able to provide causal estimates. MR is widely utilised since the cost of sequencing genomes has become more affordable. However, this technique requires large sample sizes and can also suffer from issues such as horizontal pleiotropy (where the genetic instrument affects the outcome through routes other than changes in the exposure). Therefore, a combination of laboratory experiments, observational clinical studies, RCTs and MR can therefore help to provide separate sources of evidence in investigating mechanisms of disease and can account for their separate limitations.
 
 ## Thesis aims 
-It is well established that patients with obesity have an increased risk of CVD, however, the underlying mechanism is still largely unknown. In this study I hypothesise that an increase in BMI alters the plasma proteome leading to enhanced platelet activity and CVD. To test this hypothesis, I will explore the relationship between BMI, the plasma proteome, platelets and CVD, using a multidisciplinary approach (Figure \@ref(fig:Thesis-schematic)).
+It is well established that patients with obesity have an increased risk of CVD, however, the underlying mechanism is still largely unknown. In this study I hypothesise that an increase in BMI alters the plasma proteome leading to enhanced platelet activity and CVD. To test this hypothesis, I will explore the relationship between BMI, the plasma proteome, platelets and CVD, using a multidisciplinary approach. The overall hypothesis is displayed in Figure \@ref(fig:Thesis-schematic). This schematic will be referred to within each chapter in order to highlight which parts of the pathway the chapter aims to address.
 
 The specific sub-aims of the thesis are:
 
