--- a/index/08-chap8.Rmd
+++ b/index/08-chap8.Rmd
@@ -84,7 +84,7 @@ The comparison of results from Chapter \@ref(BMI-protein-MR), which used MR and 
 
 Overall, estimates for the effect of BMI on platelet proteins in DiRECT and INTERVAL displayed a positive association. The agreement in effect estimates across study designs for the platelet protein PAFAH suggests that higher BMI does affect levels of this protein and that it is likely the power issue which means it cannot be detected in the MR. The power analysis in the discussion of Chapter \@ref(BMI-protein-MR) supports this as it was calculated that an effect size of ±0.33 SDs would be required to have a power of 80%. This protein has been suggested to be antiatherogenic, therefore lower levels would be proatherogenic[@Noto2003]. There is also evidence in mice that knocking out PAFAH increases the weight of male mice, therefore indicating that PAFAH could be important in weight regulation[@Nakamura2021]. A reverse MR analysis using SNPs associated with higher levels of PAFAH could help determine whether there is a likely causal role for PAFAH in weight regulation in humans. Validating this protein in an independent cohort and investigating this protein further in the lab could help reveal the functional implications of changes in PAFAH. This protein provides a good example of how triangulating can help tease apart the protein effects which are more likely to be driven by BMI. There were 12 other platelet proteins where there was evidence for consistency across both studies, including PAI-1 and Complement Factor B. These proteins would benefit from being followed up by examining in cardiovascular cohorts or by performing platelet function studies on isolated platelets.
 
-Divergence in estimates across study designs may also suggest that there are spurious relationships occurring. However, this divergence may also provide some insight into the biology due to the nature of each study design. In general, the MR study design provides insight into the effect on the proteome that a sustained high BMI has over the life course and is therefore indicative of chronic effects. In contrast, the estimates in DiRECT are the effect that acute weight loss (1 year) and T2D remission has on the proteome. Complement factors may be altered in the MR study, but not after a weight loss intervention because weight loss may not have been sustained long enough to induce changes at the proteome level. There was no evidence for a causal relationship between BMI and both SCAR5 and CHAD in the MR, but these proteins displayed strong associations with weight loss in DiRECT. This could be because these protein changes are signals of starvation or due to other changes that happen with caloric restriction, such as a change of medication, T2D remission or loss of muscle mass. This requires further exploration, and requires more formal analysis to disentangle effects.
+Divergence in estimates across study designs may also suggest that there are spurious relationships occurring in one of the studies. However, this divergence may also provide some insight into the biology due to the nature of each study design. In general, the MR study design provides insight into the effect on the proteome that a sustained high BMI has over the life course and is therefore indicative of chronic effects. In contrast, the estimates in DiRECT are the effect that acute weight loss (1 year) and T2D remission has on the proteome. Complement factors may be altered in the MR study, but not after a weight loss intervention because weight loss may not have been sustained long enough to induce changes at the proteome level. There was no evidence for a causal relationship between BMI and both SCAR5 and CHAD in the MR, but these proteins displayed strong associations with weight loss in DiRECT. This could be because these protein changes are signals of starvation or due to other changes that happen with caloric restriction, such as a change of medication, T2D remission or loss of muscle mass. This requires further exploration, and requires more formal analysis to disentangle effects.
 
 One of the limitations of the analyses performed in Chapter \@ref(BMI-protein-MR) and Chapter \@ref(BMI-protein-RCT) is that many proteins are not in the SOMAscan in both studies. Out of 4,034 SOMAmers in INTERVAL and 4601 SOMAmers in DiRECT, there were 2803 proteins in both. This means that there would be other proteins which would likely have reproducible effects across study (such as leptin). Therefore, this is limiting which proteins are discussed in the current chapter. Another limitation of the current chapter is that the thresholds set for this comparison are arbitrary, so the thresholds for what defines an estimate as similar or different is user defined. However, in the absence of other ways to compare units which lie on different scales, this was the most systematic way to do so.
 
