--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -50,7 +50,7 @@ include_graphics(path = "figure/General_discussion/Summary_thesis.png", dpi = NA
 
 The second sub-aim was to characterise the effects of the chemokines macrophage-derived chemokine (MDC) and thymus and activation regulated chemokine (TARC) on platelet function. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised as a result of obesity-induced inflammation. MDC and TARC were found to potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. There was MR evidence that higher levels of MDC could contribute to DVT and PE. 
 
-As proteins that circulate in the blood have the ability to modulate platelet function, the final aim of the thesis was more hypothesis-free in nature: to determine the effects of adiposity on the plasma proteome, in particular proteins which may relate to platelet function. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. Chapter \@ref(Comparison-proteome) brought together these study designs to identify consistent evidence for BMI effects on proteins. These analyses pointed towards proteins which may be important in obesity-related CVD such as SHBG, fumarylacetoacetase and IGFBP1/2. Specific analysis of the effect of BMI on proteins involved in platelet GO also implicated proteins such as PAFAH which is altered by BMI and may lead to platelet hyperactivity. 
+As proteins that circulate in the blood have the ability to modulate platelet function, the final aim of the thesis was more hypothesis-free in nature: to determine the effects of adiposity on the plasma proteome, in particular proteins which may relate to platelet function. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. Chapter \@ref(Comparison-proteome) brought together these study designs to identify consistent evidence for BMI effects on proteins. These analyses pointed towards proteins which may be important in obesity-related CVD such as SHBG, fumarylacetoacetase and IGFBP1/2. Specific analysis of the effect of BMI on proteins involved in platelet GO pathways also implicated proteins such as PAFAH which is altered by BMI and may lead to platelet hyperactivity. 
 
 ## Wider implications of findings
 The research within this thesis has contributed to the understanding of mechanisms of obesity-related CVD. As well as providing evidence for a role of body mass index in the production of immature platelets, the research surrounding IPC has wider implications. As mentioned in Chapter \@ref(BMI-platelets-INTERVAL), the standard full blood count used by the NHS does not include IPC.  Similarly, more detailed blood counts from newer haematology analyzers also do not provide IPC within the summary, however it can be derived from IPF and PLT. The finding that IPC associates with whole blood platelet aggregation is important as it not only suggests that IPC should be considered in patients with obesity, but it could also be a useful biomarker of platelet hyperactivity across the population. Studies have indicated that there is a positive correlation between IPC and ADP-induced platelet aggregation in patients receiving either prasugrel or ticagrelor, therefore IPC could be used to predict which patients would be more responsive to antiplatelet treatment[@Bernlochner2015a].
