--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -59,7 +59,7 @@ include_graphics(path = "figure/BMI_platelets/obsvMRexample.png", dpi = NA)
 ## The INTERVAL study {#INTERVAL-study}
 
 ### Study overview
-INTERVAL is a prospective cohort study that initially aimed to test the safety of reducing the time interval between donation of whole blood in 50,000 participants[@DiAngelantonio2017]. Participants were over the age of 18 years, able to provide informed consent and free from a history of major disease. Participants were recruited between June 11th, 2012 and June 15th, 2014 from 25 National Health Service Blood and Transplant (NHSBT) centres across England. They filled out online questionnaires including self-reported height and weight, smoking status and alcohol consumption. Blood samples were also taken at baseline (before randomisation within the study) where full blood counts were obtained. The study was approved by Cambridge East Research Ethics Committee. Permission for data access was provided by the Data Access Committee. Data contains sensitive content and requires permission to use therefore cannot be made publicly available. Access to data needs to be approved by the INTERVAL team www.intervalstudy.org.uk/more-information.
+INTERVAL is a prospective cohort study that initially aimed to test the safety of reducing the time interval between donation of whole blood in 50,000 participants[@DiAngelantonio2017]. Participants were over the age of 18 years, able to provide informed consent and free from a history of major disease. Participants were recruited between June 11th, 2012 and June 15th, 2014 from 25 National Health Service Blood and Transplant (NHSBT) centres across England. They filled out online questionnaires including self-reported height and weight, smoking status and alcohol consumption. Blood samples were also taken at baseline (before randomisation within the study) where full blood counts were obtained. The study was approved by Cambridge East Research Ethics Committee. Permission for data access was provided by the Data Access Committee.
 
 ### Assessment of BMI and covariables
 
@@ -159,10 +159,10 @@ include_graphics(path = "figure/BMI_platelets/Corrmatrix_dendrogram.pdf", dpi = 
 ```
 
 ### Observational associations between BMI and platelet traits in INTERVAL
-Linear regression was performed to determine whether a higher BMI was associated with a change in platelet characteristics. In the confounder adjusted linear regression (Table \@ref(tab:BMI-platelets-adjust)), BMI was positively associated with PCT (0.12 SD higher per SD higher BMI, 95% CI 0.11 to 0.13, P = 9.2 x 10^-88^) and platelet count (PLT (I) 0.11 SD higher per SD higher BMI, 95% CI 0.09 to 0.12, P = 1.0 x 10^-67^). The next strongest association with BMI was the association with SFL (0.06 SD higher per SD increase in BMI, 95% CI 0.05 to 0.07, P = 4.7x10^-23^). BMI also showed a positive association with IPC (0.06 SD higher per SD increase in BMI, 95% CI 0.05 to 0.08, P = 4.8x10^-22^). These results demonstrate that BMI is positively associated with PCT, PLT (I), SFL and IPC in this population. These estimates were very similar to the age and sex only adjusted estimates (Table \@ref(tab:BMI-platelets-unadjust)).
+Linear regression was performed to determine whether a higher BMI was associated with a change in platelet characteristics. In the confounder adjusted linear regression (Table \@ref(tab:BMI-platelets-adjust)), BMI was positively associated with PCT (0.12 SD higher per SD higher BMI, 95% CI 0.11 to 0.13, p = 9.2 x 10^-88^) and platelet count (PLT (I) 0.11 SD higher per SD higher BMI, 95% CI 0.09 to 0.12, p = 1.0 x 10^-67^). The next strongest association with BMI was the association with SFL (0.06 SD higher per SD increase in BMI, 95% CI 0.05 to 0.07, p = 4.7x10^-23^). BMI also showed a positive association with IPC (0.06 SD higher per SD increase in BMI, 95% CI 0.05 to 0.08, p = 4.8x10^-22^). These results demonstrate that BMI is positively associated with PCT, PLT (I), SFL and IPC in this population. These estimates were very similar to the age and sex only adjusted estimates (Table \@ref(tab:BMI-platelets-unadjust)).
 
 
-(ref:caption-BMI-platelets-adjust) **Observational associations between BMI and platelet measures adjusted for age, sex, smoking status and alcohol consumption.** Βeta coefficient is the change in platelet measure in SDs per normalized SD increase in BMI. PCT = plateletcrit, PLT (I) = platelet count (impedance channel), PLT (F) = platelet count (PLT-F channel), SFL = side fluorescence, IPC = immature platelet count, PDW = platelet distribution width, FSC = forward scatter, H-IPF = high fluorescence immature platelet fraction, IPF = immature platelet fraction, P-LCR = platelet large cell ration, SSC = side scatter, MPV = mean platelet volume. Eta squared is the proportion of variance explained by the platelet trait in an ANOVA, whereas adjusted R squared is the variance explained by all the predictor variables in the regression model.
+(ref:caption-BMI-platelets-adjust) **Observational associations between BMI and platelet measures adjusted for age, sex, smoking status and alcohol consumption.** Beta coefficient is the change in platelet measure in SDs per normalized SD increase in BMI. PCT = plateletcrit, PLT (I) = platelet count (impedance channel), PLT (F) = platelet count (PLT-F channel), SFL = side fluorescence, IPC = immature platelet count, PDW = platelet distribution width, FSC = forward scatter, H-IPF = high fluorescence immature platelet fraction, IPF = immature platelet fraction, P-LCR = platelet large cell ration, SSC = side scatter, MPV = mean platelet volume. Eta squared is the proportion of variance explained by the platelet trait in an ANOVA, whereas adjusted R squared is the variance explained by all the predictor variables in the regression model.
 
 (ref:scaption-BMI-platelets-adjust) Observational associations between BMI and platelet measures adjusted for age, sex, smoking status and alcohol consumption
 
@@ -179,7 +179,7 @@ CI <- c(0.012,0.012,0.012,0.012,0.013,0.013,0.012,0.012,0.013,0.012,0.012,0.013)
 Lower <- c(0.11,0.09,0.09,0.05,0.05,0.01,0.01,-0.03,'0.00','0.00',-0.01,-0.01)
 Upper <- c(0.13,0.12,0.11,0.07,0.08,0.04,0.03,-0.01,0.03,0.02,0.02,0.02)
 mytable = data.frame(cbind(Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper))
-colnames(mytable) <- c('Platelet trait',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+colnames(mytable) <- c('Platelet trait',	'N',	'Beta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
 mytable %>% kable(caption = "(ref:caption-BMI-platelets-adjust)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-BMI-platelets-adjust)") %>%
  kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
@@ -214,7 +214,7 @@ mytable %>% kable(caption = "(ref:caption-BMI-platelets-unadjust)", booktabs = T
 ```
 
 ### Associations of covariables with BMI and platelet traits in INTERVAL
-The association of covariables (age, sex, smoking and alcohol) with BMI were evaluated (Table \@ref(tab:INT-confounders-BMI-platelets)). Included covariables in the analysis showed associations with BMI. Males had a higher BMI than females (0.18 SD, 95% CI 0.16 to 0.21, P = 9.64x10^-64^). Age was positively associated with BMI (0.011 SD higher per year older, 95% CI 0.010 to 0.012, P = 1.11x10^-182^). Alcohol showed an inverse association with BMI and smoking showed a weak positive association with BMI. Associations between covariables (age, sex, smoking, alcohol) and platelet traits were also explored (Figure \@ref(fig:confounder-platelets)). Higher age was generally inversely associated with platelet measures. Males had a lower platelet count and PCT compared to females (PLT-F was 0.57 lower 95% CI -0.60 to -0.55, P = 9.9x10^-324^). Weak associations were detected between smoking and platelet traits such as a positive association between smoking status and immature platelets. Higher alcohol consumption also showed inverse associations with measures of PCT and PLT.
+The association of covariables (age, sex, smoking and alcohol) with BMI were evaluated (Table \@ref(tab:INT-confounders-BMI-platelets)). Included covariables in the analysis showed associations with BMI. Males had a higher BMI than females (0.18 SD, 95% CI 0.16 to 0.21, p = 9.64x10^-64^). Age was positively associated with BMI (0.011 SD higher per year older, 95% CI 0.010 to 0.012, p = 1.11x10^-182^). Alcohol showed an inverse association with BMI and smoking showed a weak positive association with BMI. Associations between covariables (age, sex, smoking, alcohol) and platelet traits were also explored (Figure \@ref(fig:confounder-platelets)). Higher age was generally inversely associated with platelet measures. Males had a lower platelet count and PCT compared to females (PLT-F was 0.57 lower 95% CI -0.60 to -0.55, p = 9.9x10^-324^). Weak associations were detected between smoking and platelet traits such as a positive association between smoking status and immature platelets. Higher alcohol consumption also showed inverse associations with measures of PCT and PLT.
 
 (ref:caption-INT-confounders-BMI-platelets) **Associations between age, sex, smoking and alcohol consumption (exposures) with standardised BMI (outcome).** Beta coefficient is the change in BMI (normalized SDs) per unit increase in exposure.
 
@@ -253,7 +253,7 @@ include_graphics(path = "figure/BMI_platelets/Confounders_platelet_forest_plot.p
 
 
 ### GRS for BMI associations with BMI and covariables
-To estimate the causal effect of BMI on platelet characteristics, MR was performed. The GRS for BMI (the average per SNP effect on BMI) showed a normal distribution (mean 0.08, SD 0.30, range -1.15 to 1.34) and was positively associated with BMI to the degree expected (R^2^ = 0.042, P = 2.3x10^-312^, F=1458, Table \@ref(tab:INT-GRS-confounders-platelets)). The GRS did not associate with sex, however weak associations were detected with alcohol consumption, age, and smoking status. The amount of variance explained by the GRS for BMI on any covariable included did not exceed R^2^ = 0.002 (Table \@ref(tab:INT-GRS-confounders-platelets)). As the GRS associates with BMI but does not strongly associate with the measured covariables, it is thus likely a valid instrument to perform MR.
+To estimate the causal effect of BMI on platelet characteristics, MR was performed. The GRS for BMI (the average per SNP effect on BMI) showed a normal distribution (mean 0.08, SD 0.30, range -1.15 to 1.34) and was positively associated with BMI to the degree expected (R^2^ = 0.042, p = 2.3x10^-312^, F=1458, Table \@ref(tab:INT-GRS-confounders-platelets)). The GRS did not associate with sex, however weak associations were detected with alcohol consumption, age, and smoking status. The amount of variance explained by the GRS for BMI on any covariable included did not exceed R^2^ = 0.002 (Table \@ref(tab:INT-GRS-confounders-platelets)). As the GRS associates with BMI but does not strongly associate with the measured covariables, it is thus likely a valid instrument to perform MR.
 
 (ref:caption-INT-GRS-confounders-platelets) **Association between genetic risk score for BMI with both BMI and covariables.** Beta coefficient is the change in outcome variable per unit increase in the genetic risk score for BMI.
 
@@ -278,7 +278,7 @@ column_spec(1, width = "6cm")  # %>%
 ```
 
 ### Mendelian randomisation estimates for the association between BMI and platelet traits
-In the MR analyses, BMI was associated with fewer traits than in the observational analysis (Table \@ref(tab:BMI-platelets-MR), \@ref(fig:BMI-platelet-forest)). The causal estimate for the effect of BMI on SFL was 0.08 SDs per SD increase in BMI (95% CI 0.03 to 0.14, P = 0.003). This estimate was of larger magnitude than the observational estimate. The causal estimate for BMI and IPC was 0.06 SDs per SD increase in BMI (95% CI 0.006 to 0.12, P = 0.03), a similar magnitude of effect to the observational estimate. In the MR analysis, unlike in the observational analysis, the causal estimate did not suggest an effect of BMI on either PCT or PLT. MR estimates did not provide evidence for associations between BMI and other platelet variables. The point estimates were consistently positive, aligning with the positive observational associations seen across the platelet traits. Across all but one (H-IPF) of the platelet phenotypes, differences in directionality of effect comparing observational effects and causal effects predicted by Mendelian randomisation were not observed (Figure \@ref(fig:BMI-platelet-forest)).
+In the MR analyses, BMI was associated with fewer traits than in the observational analysis (Table \@ref(tab:BMI-platelets-MR), \@ref(fig:BMI-platelet-forest)). The causal estimate for the effect of BMI on SFL was 0.08 SDs per SD increase in BMI (95% CI 0.03 to 0.14, p = 0.003). This estimate was of larger magnitude than the observational estimate. The causal estimate for BMI and IPC was 0.06 SDs per SD increase in BMI (95% CI 0.006 to 0.12, p = 0.03), a similar magnitude of effect to the observational estimate. In the MR analysis, unlike in the observational analysis, the causal estimate did not suggest an effect of BMI on either PCT or PLT. MR estimates did not provide evidence for associations between BMI and other platelet variables. The point estimates were consistently positive, aligning with the positive observational associations seen across the platelet traits. Across all but one (H-IPF) of the platelet phenotypes, differences in directionality of effect comparing observational effects and causal effects predicted by Mendelian randomisation were not observed (Figure \@ref(fig:BMI-platelet-forest)).
 The Wu-Hausman test suggested that observational and MR estimates were similar for the majority of platelet traits (P > 0.05), except for measures of platelet count and plateletcrit (P < 0.001) (Table \@ref(tab:BMI-platelets-MR)). 
 
 (ref:caption-BMI-platelets-MR) **Mendelian randomisation estimates for the effect of BMI on platelet traits.** Beta coefficient is the change in platelet measure in SDs per SD higher BMI.
@@ -301,7 +301,7 @@ Upper <- c(0.139,0.122,0.108,0.110,0.103,0.091,0.088,0.093,0.086,0.084,0.073,0.0
 Wu <- c(0.973,0.672,0.774,0.0003,0.334,0.001,0.527,0.936,0.746,0.001,0.433,0.223)
 Fstat <- c(676,641,652,706,603,729,678,625,614,671,661,650)
 mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper, Wu, Fstat))
-colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI', "Wu-Hausman P value", 'F-statistic (GRS and BMI association)')
+colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Beta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI', "Wu-Hausman P value", 'F-statistic (GRS and BMI association)')
 mytable %>% kable(caption = "(ref:caption-BMI-platelets-MR)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-BMI-platelets-MR)") %>% 
   kable_classic_2(full_width = F, font_size = 8) %>%
  kable_styling(full_width = TRUE) %>%
@@ -332,13 +332,13 @@ Adjustment <- c('Age and sex','Age and sex','Age and sex','Age and sex','Fully a
 Group = c('Underweight','Healthy','Overweight','Obese','Underweight','Healthy','Overweight','Obese')
 BMIrange <- c('<18.5','18.5-24.9','25-29.9','30+','<18.5','18.5-24.9','25-29.9','30+')
 N = c(169,11889,10189,5008,149,10500,8918,4342)
-Beta = c(0.202,0.039,0.092,0.032,0.269,0.033,0.070,0.018)
+Beta = c(0.202,0.039,0.092,0.032,0.269,0.033,"0.070",0.018)
 SE <- c(0.834,0.018,0.034,0.032,0.296,0.019,0.036,0.035)
 P <- c(0.461,0.026,0.006,0.315,0.366,0.079,0.052,0.614)
 R <- c(-0.009,0.003,0.006,0.004,0.033,0.004,0.006,0.005)
 CI <- c(1.635,0.035,0.066,0.063,0.580,0.037,0.070,0.069)
-Lower <- c(-1.434,0.005,0.027,-0.031,-0.311,-0.004,0.000,-0.051)
-Upper <- c(1.837,0.074,0.158,0.096,0.849,0.069,0.140,0.086)
+Lower <- c(-1.434,0.005,0.027,-0.031,-0.311,-0.004,"0.000",-0.051)
+Upper <- c(1.837,0.074,0.158,0.096,0.849,0.069,"0.140",0.086)
 mytable = data.frame(cbind(Adjustment, Group, BMIrange, N, Beta, SE, P, R, CI, Lower, Upper))
 colnames(mytable) <- c('Adjustment', 'Group', 'BMI range',	'N',	'Beta coefficient',	'SE',	'P value',	'R^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
 mytable %>% kable(caption.short = "(ref:scaption-BMI-platelets-stratified)", format = "markdown", caption = "(ref:caption-BMI-platelets-stratified)", booktabs = TRUE )  
@@ -406,7 +406,7 @@ mytable %>% kable(caption = "(ref:caption-BMI-platelets-COPTIC)", format = "mark
 
 To determine the potential functional effects of variation in IPC, the COPTIC cohort was used to assess the observational association between IPC and whole blood platelet aggregation in response to a range of platelet agonists (Figure \@ref(fig:IPC-aggregation)A). In participants who were not on antiplatelet therapy (up to N=655), there was evidence for a positive association between IPC and aggregation induced by adrenaline (0.13 SD increase per SD increase in IPC, 95% CI 0.04 to 0.21, p=3.7x10^-3^), TRAP-6 (0.11 SD increase per SD increase in IPC, 95% 0.03 to 0.18, p=7.8x10^-3^) and ADP (0.08 SD per SD increase in IPC, 95% 0.01 to 0.0.15, p=0.04). As there was a high correlation among platelet traits (Figure \@ref(fig:IPC-aggregation)A, Figure \@ref(fig:IPC-aggregation)B), the effect of MPV, PLT and IPF were also assessed. PLT was associated with all four measures of aggregation, with a larger effect estimate than IPC (Figure \@ref(fig:IPC-aggregation)A). The finding that IPC does not correlate with PLT however suggests that the effect of IPC on platelet aggregation is independent of the effect of PLT on platelet aggregation (Figure \@ref(fig:IPC-aggregation)B). Fitting PLT alongside IPC as an additional predictor of aggregation had little effect on the IPC effect estimate providing further evidence of independent contributions from the two traits (Figure \@ref(fig:IPC-aggregation)C). Adjustment for PLT in the regression model for the association between IPF and aggregation provided estimates of a similar magnitude to that of IPC and aggregation.
 
-(ref:caption-IPC-aggregation) **Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants.** A) Forest plot displaying the association between platelet measures (exposure) and aggregation (outcomes). B) Correlation matrix displaying the Pearson’s correlation coefficient (r) between platelet traits. C) Forest plot displaying the effect estimate for the association between immature platelet count (IPC) or immature platelet fraction (IPF) and measures of aggregation, with or without adjustment for platelet count (PLT). ADP = adenosine diphosphate, AA = arachidonic acid, MPV = mean platelet volume.
+(ref:caption-IPC-aggregation) **Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants.** A) Forest plot displaying the association between platelet measures (exposure) and aggregation (outcomes). B) Correlation matrix displaying the Pearson’s correlation coefficient (r) between platelet traits. C) Forest plot displaying the effect estimate for the association between immature platelet count (IPC) or immature platelet fraction (IPF) and measures of aggregation, with or without adjustment for platelet count (PLT). ADp = adenosine diphosphate, AA = arachidonic acid, MPV = mean platelet volume.
 
 (ref:scaption-IPC-aggregation) Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants
 
@@ -417,7 +417,7 @@ include_graphics(path = "figure/BMI_platelets/IPC_aggregation.pdf", dpi = NA)
 
 ## Discussion
 
-In this chapter data from 33,388 healthy blood donors was used to study the effect of BMI on platelet phenotypes including measures of count, size and maturity. The combination of observational and MR estimates suggested a positive causal effect of BMI on SFL and IPC. The observational analysis revealed a strong association between BMI and both PLT and PCT, however the MR estimates did not provide evidence to support this association as causal. Observational analysis using data from a cardiac surgery cohort provided evidence for a positive association between IPC and aggregation induced by adrenaline, TRAP6 and ADP. A summary of these findings is indicated in \@ref(fig:BMI-platelet-cartoon).
+In this chapter data from 33,388 healthy blood donors was used to study the effect of BMI on platelet phenotypes including measures of count, size and maturity. The combination of observational and MR estimates suggested a positive causal effect of BMI on SFL and IPC. The observational analysis revealed a strong association between BMI and both PLT and PCT, however the MR estimates did not provide evidence to support this association as causal. Observational analysis using data from a cardiac surgery cohort provided evidence for a positive association between IPC and aggregation induced by adrenaline, TRAP6 and ADP. A summary of these findings is indicated in Figure \@ref(fig:BMI-platelet-cartoon).
 
 (ref:caption-BMI-platelet-cartoon) **Graphical summary of findings**. Figure made using BioRender.com.
 (ref:scaption-BMI-platelet-cartoon) Graphical summary of findings
