--- a/index/07-chap7.Rmd
+++ b/index/07-chap7.Rmd
@@ -34,9 +34,9 @@ This work has been presented at the International Genetic Epidemiology Society m
 
 ## Background
 
-Obesity is associated with an increased risk of type II diabetes (T2D), CVD, musculoskeletal diseases, and types of cancer[@Garg2014; @Khan2018; @Kortt2002]. These associations are well established, however mechanisms of disease are less clear. It is likely that a change in the composition of proteins circulating in the blood plays a role in obesity-related cardiovascular risk[@Goudswaard2021]. The previous results chapter (Chapter \@ref(BMI-protein-MR)) examined the effect of BMI on the plasma proteome and provided estimates for the average change in proteins per average difference in BMI in a general population, using observational estimates and one sample Mendelian randomisation (MR). Results suggested a BMI effect on proteins such as leptin, sex hormone binding globulin (SHBG), fatty acid binding protein 4 (FABP4) and fumarylacetoacetase. Within an enrichment analysis, this change in circulating levels of these proteins was implicated in CVDs. There is also evidence that obesity affects platelet function, thereby elevating the risk of thrombotic events. Previous work and results from Chapter \@ref(chemokine-platelets), where MDC and TARC were shown to be able to activate platelets, suggest that circulating proteins could mediate this risk.
+Obesity is associated with an increased risk of type II diabetes (T2D), CVD, musculoskeletal diseases, and types of cancer[@Garg2014; @Khan2018; @Kortt2002]. These associations are well established, however mechanisms of disease are less clear. It is likely that a change in the composition of proteins circulating in the blood plays a role in obesity-related cardiovascular risk[@Goudswaard2021]. The previous results chapter (Chapter \@ref(BMI-protein-MR)) examined the effect of BMI on the plasma proteome and provided estimates for the average change in proteins per average difference in BMI in a general population, using observational estimates and one sample Mendelian randomisation (MR). This gives an estimate of the effect of BMI on protein levels over the life course. Results suggested a BMI effect on proteins such as leptin, sex hormone binding globulin (SHBG), fatty acid binding protein 4 (FABP4) and fumarylacetoacetase. Within an enrichment analysis, this change in circulating levels of these proteins was implicated in CVDs. There is also evidence that obesity affects platelet function, thereby elevating the risk of thrombotic events. Previous work and results from Chapter \@ref(chemokine-platelets), where MDC and TARC were shown to be able to activate platelets, suggest that circulating proteins could mediate this risk.
 
-Although MR helps to overcome issues inherent to observational studies such as confounding and reverse causation, MR has its own limitations. For example, it is possible that genetic variants used for the genetic risk score could affect protein levels through routes other than changes in BMI. This is known as horizonal pleiotropy[@Davies2018]. As well as this, although there were over 2700 particpants within the MR, this is a relatively small sample size for the study design. Additionally, it is important to not only look at which proteins are altered within the population with higher BMI; identifying which proteins can be modulated with weight loss is important as this may help reveal mechanistic insight into mechanisms of obesity-related CVD. Triangulation can therefore be used in efforts to further determine the BMI effects on the plasma proteome. Triangulation is defined as strengthening causal inference through the combination of study designs which each have separate sources of bias[@Lawlor2016]. Therefore, to add an independent source of evidence to the MR in the previous chapter, the Diabetes REmission Clinical Trial (DiRECT) can be utilised. The DiRECT trial consisted of a group of patients with overweight/obesity and T2D who were either given guideline T2D care or an acute intervention, consisting of a low calorie diet, to help with weight loss and T2D remission[@Lean2018]. This trial therefore provided a separate opportunity to explore the effect of BMI on the plasma proteome due to the variance in BMI created through a successful weight loss intervention.
+Although MR helps to overcome issues inherent to observational studies such as confounding and reverse causation, MR has its own limitations. For example, it is possible that genetic variants used for the genetic risk score could affect protein levels through routes other than changes in BMI. This is known as horizonal pleiotropy[@Davies2018]. As well as this, although there were over 2700 participants within the MR, this is a relatively small sample size for the study design. Additionally, it is important to not only look at which proteins are altered within the population with higher BMI; identifying which proteins can be modulated with weight loss is important as this may help reveal mechanistic insight into mechanisms of obesity-related CVD. Triangulation can therefore be used in efforts to further determine the BMI effects on the plasma proteome. Triangulation is defined as strengthening causal inference through the combination of study designs which each have separate sources of bias[@Lawlor2016]. Therefore, to add an independent source of evidence to the MR in the previous chapter, the Diabetes REmission Clinical Trial (DiRECT) can be utilised. The DiRECT trial consisted of a group of patients with overweight/obesity and T2D who were either given guideline T2D care or an acute intervention, consisting of a low calorie diet, to help with weight loss and T2D remission[@Lean2018]. This trial therefore provided a separate opportunity to explore the effect of BMI on the plasma proteome due to the variance in BMI created through a successful weight loss intervention.
 
 (ref:caption-BMI-protein-graphic2) **Schematic of the associations explored in Chapter \@ref(BMI-protein-RCT). This chapter explores the effect of caloric restriction-induced weight loss on the plasma proteome.** Figure made using BioRender.com.
 (ref:scaption-BMI-protein-graphic2) Schematic of the associations explored in Chapter \@ref(BMI-protein-RCT)
@@ -201,7 +201,7 @@ Using StringDB and inputting p values for the association between BMI change and
 \blandscape
 \thispagestyle{empty}
 
-(ref:caption-platelet-enrichment) **Network of proteins in DiRECT which are involved in platelet activation**. Nodes represent individual proteins. The halo colour represents the rank of the protein where blue indicates the top of the list (most strongly associated with BMI change) and red indicates the bottom of the list. The edges indicate known interactions between proteins. Figure from made using string-db.org
+(ref:caption-platelet-enrichment) **Network of proteins in DiRECT which are involved in platelet activation**. Nodes represent individual proteins. The halo colour represents the rank of the protein where blue indicates the top of the list (most strongly associated with BMI change) and red indicates the bottom of the list (proteins not associated with BMI change). The edges indicate known interactions between proteins. Figure made using string-db.org
 
 (ref:scaption-platelet-enrichment) Network of proteins in DiRECT which are involved in platelet activation. 
 
